infrastructure/subsystems/storage-core/longhorn/ui-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui-https
  namespace: longhorn-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: longhorn.${domain_name}
    traefik.ingress.kubernetes.io/router.middlewares: traefik-header-forwarded@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  # setting tls to [], so that default certficate will be assigned
  tls: []
  rules:
  - host: longhorn.${domain_name}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
